<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/gris_claro"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tit_datos"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            style="@style/titulo"/>

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"/>

        <EditText
            android:id="@+id/year"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"/>

        <EditText
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/director"/>


        <EditText
            android:id="@+id/reparto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reparto" />

        <EditText
            android:id="@+id/sinopsis"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/sinopsis"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/add_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_imagen"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/upl_imagen"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/boton"
            android:text="@string/registro"/>
    </LinearLayout>

</ScrollView>