<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="16dp"
    tools:context=".LoginActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/titulo"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/log_correo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="70dp"
        android:hint="@string/correo"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/log_pass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            style="@style/boton"
            android:text="@string/singin"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            style="@style/boton"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>