<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris_claro"
    android:gravity="center"
    tools:context=".SingInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_usuario"
        style="@style/titulo"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/sign_correo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/correo"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/sign_pass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/boton"
        android:text="@string/reg_usuario"
        android:layout_marginHorizontal="10dp"/>

</LinearLayout>