<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginHorizontal="16dp"
    tools:context=".DetalleRecyclerActivity">

    <TextView
        android:id="@+id/recy_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        style="@style/titulo"
        android:text="Titulo de prueba"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                style="@style/inicio"/>
            <TextView
                android:id="@+id/recy_year"
                style="@style/texto_basico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="2023" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/director"
                style="@style/inicio"/>

            <TextView
                android:id="@+id/recy_director"
                style="@style/texto_basico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Steven Spielberg" />
        </LinearLayout>

        <ImageView
            android:id="@+id/recy_imagen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:src="@drawable/logo_logomark" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reparto"
        style="@style/inicio"/>

    <TextView
        android:id="@+id/recy_reparto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Texto de prueba"
        android:layout_marginBottom="50dp"
        style="@style/texto_basico"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinopsis"
        style="@style/inicio"/>

    <TextView
        android:id="@+id/recy_sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Texto de prueba"
        style="@style/texto_basico"/>
</LinearLayout>